fix btn + btn spacing breakpoints

--- a/app/styles/elements/_forms.scss
+++ b/app/styles/elements/_forms.scss
@@ -68,7 +68,7 @@ select {
 }
 
 .btn + .btn {
-  @media (min-width:$screen-sm-min) {
+  @media (min-width:$screen-s-min) {
     margin-left:$main-cont-padding-small;
   }
 }
@@ -89,7 +89,7 @@ input[type="button"].btn-block,
 
 .btn-block + .btn-block {
   margin-top:$main-cont-padding-small;
-  @media (min-width:$screen-sm-min) {
+  @media (min-width:$screen-s-min) {
     margin-top:0;
   }
 }
